WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
119249
findFirstGrammarDetail doesn't need to be exposed
https://bugs.webkit.org/show_bug.cgi?id=119249
Summary
findFirstGrammarDetail doesn't need to be exposed
Grzegorz Czajkowski
Reported
2013-07-30 05:34:26 PDT
Cleanup. Make TextCheckingHelper::findFirstGrammarDetail private. Remove badGrammarPhraseLength param. It's not used any longer.
Attachments
proposed patch
(3.76 KB, patch)
2013-07-30 05:37 PDT
,
Grzegorz Czajkowski
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Grzegorz Czajkowski
Comment 1
2013-07-30 05:37:53 PDT
Created
attachment 207728
[details]
proposed patch
Grzegorz Czajkowski
Comment 2
2013-07-31 00:22:52 PDT
Committed
r153512
: <
http://trac.webkit.org/changeset/153512
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug