findFirstGrammarDetail doesn't need to be exposed. https://bugs.webkit.org/show_bug.cgi?id=119249

Reviewed by Darin Adler.

Make TextCheckingHelper::findFirstGrammarDetail private.
Remove badGrammarPhraseLength param. It's not used any longer.

No new tests, no behavior change.

* editing/TextCheckingHelper.cpp:
(WebCore::TextCheckingHelper::findFirstGrammarDetail):
(WebCore::TextCheckingHelper::findFirstBadGrammar):
* editing/TextCheckingHelper.h:

Canonical link: https://commits.webkit.org/137273@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@153512 268f45cc-cd09-0410-ab3c-d52691b4dbfc